<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_toStartOf="@+id/lyPuntos"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/paddDrawable"
            android:drawableStart="@drawable/ic_promocion"
            android:paddingTop="@dimen/padding_inputs"
            android:paddingRight="@dimen/padding_inputs"
            android:paddingLeft="@dimen/padding_inputs"
            android:paddingStart="@dimen/padding_inputs"
            android:paddingEnd="@dimen/padding_inputs"
            android:text="@string/app_name" />
        <TextView
            android:id="@+id/txtFechas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_top"
            android:paddingEnd="0dp"
            android:text="@string/validahasta"
            android:textColor="@color/colorAccent"
            android:textStyle="italic"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyPuntos"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPuntos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/numero"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/puntos" />
    </LinearLayout>
</RelativeLayout>