<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contenedor.fragments.venta.view.FragmentVenta">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearVenta"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgFoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_camara" />

        <TextView
            android:id="@+id/lblFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_photo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/linea"
            android:background="@android:color/darker_gray" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_med">

            <EditText
                android:id="@+id/inputImei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_imei"
                android:drawablePadding="@dimen/paddDrawable"
                android:drawableStart="@drawable/ic_imei"
                android:hint="@string/numero_imei"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputCorrelativo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_correlativo"
                android:drawablePadding="@dimen/paddDrawable"
                android:drawableStart="@drawable/ic_correlativo"
                android:hint="@string/correlativo"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_weight="1"
                android:text="@string/borrardatos"
                android:textAllCaps="false"
                android:theme="@style/AppTheme.BotonRojo" />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_weight="1"
                android:text="@string/enviar"
                android:textAllCaps="false"
                android:theme="@style/AppTheme.botonVerde" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
