<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".registro.view.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruccionesregistro"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                android:textAppearance="?android:textAppearanceSmall"
                />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_med"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_inputs">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/txtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nombre"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/txtFechaNacimiento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/fechanacimiento"
                            android:inputType="date" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/txtDPI"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/dpi"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/txtTelefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/telefono"
                            android:inputType="phone" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/txtUsuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/usuario"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/clave"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/txtPasswordvalidacion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirmapass"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnRegistrar"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/registrarse"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/view_progress" />
</FrameLayout>
