<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="intcomex.vendeygana.contenedor.fragments.premios.view.FragmentCatalogoPremios">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/encabezado"
        android:background="@color/colorPrimaryDark"
        >
        <TextView
            android:id="@+id/txtPuntos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:gravity="center"
            android:textSize="112sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consultarpuntosacumulados"
            android:gravity="center_horizontal"
            android:layout_marginTop="-10dp"
            android:textColor="@color/colorAccent"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/switchFiltro"
            android:text="@string/filtrarsegunmispuntos"
            android:padding="@dimen/paddDrawable"
            android:textColor="@android:color/white"
            android:switchPadding="@dimen/padding_inputs"
            />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/encabezado"
        android:id="@+id/lyLista"
        />

</RelativeLayout>
