<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".login.view.Login">




    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textSize="36sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_inputs">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/txtUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/usuario"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/txtClave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/clave"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnIngresar"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/ingresar" />
        <Button
            android:id="@+id/btnRegistrar"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <include layout="@layout/view_progress"/>
</FrameLayout>
